Fix spacing in products, prevent overflow in pricing if more elements added

--- a/src/styles/components/home/_pricing.scss
+++ b/src/styles/components/home/_pricing.scss
@@ -26,6 +26,8 @@
     @include tab {
       flex-direction: row;
       padding-top: 56px;
+      overflow-x: auto;
+      justify-content: space-between;
     }
 
     @include desk {
